# Machnata

./: .gitignore  LICENSE  README.md  install_requirements.sh
output/proto/HL7/v600/: fhir.schema.proto
output/proto/OCPI/v211/: ocpi.2_1_1.cdr.partial.proto  ocpi.2_1_1.cdr.proto  ocpi.2_1_1.cdr.response.proto  ocpi.2_1_1.cdrs.proto  ocpi.2_1_1.cdrs.response.proto  ocpi.2_1_1.commands.reserve_now.request.proto  ocpi.2_1_1.commands.response.proto  ocpi.2_1_1.commands.start_session.request.proto  ocpi.2_1_1.commands.stop_session.request.proto  ocpi.2_1_1.commands.unlock_connector.request.proto  ocpi.2_1_1.connector.partial.proto  ocpi.2_1_1.connector.proto  ocpi.2_1_1.connector.response.proto  ocpi.2_1_1.credentials.proto  ocpi.2_1_1.credentials.response.proto  ocpi.2_1_1.empty.proto  ocpi.2_1_1.evse.partial.proto  ocpi.2_1_1.evse.proto  ocpi.2_1_1.evse.response.proto  ocpi.2_1_1.location.partial.proto  ocpi.2_1_1.location.proto  ocpi.2_1_1.location.response.proto  ocpi.2_1_1.locations.proto  ocpi.2_1_1.locations.response.proto  ocpi.2_1_1.session.partial.proto  ocpi.2_1_1.session.proto  ocpi.2_1_1.session.response.proto  ocpi.2_1_1.sessions.proto  ocpi.2_1_1.sessions.response.proto  ocpi.2_1_1.tariff.partial.proto  ocpi.2_1_1.tariff.proto  ocpi.2_1_1.tariff.response.proto  ocpi.2_1_1.tariffs.proto  ocpi.2_1_1.tariffs.response.proto  ocpi.2_1_1.token.partial.proto  (+9 more)
resources/yocto/: README.md  ocpp_v16_4_c_test.bb  ocpp_v201_4_cpp_test.bb  ocpp_v21_4_cpp_test.bb
src/: json_to_proto.py  schema_generator.py
test/c/: Makefile  test_v16.c
test/cpp/: CMakeLists.txt  test_v201.cpp  test_v21.cpp
(+3054 files in other folders)
